# scrapyard-command-center

./: .env.example  .gitignore  DECISIONS.md  NEXT.md  README.md  SCC_STATE.md  docker-compose.yml  monitor.sh  pyproject.toml
alarm/data/: cameras_ai.json
alarm/reolink/: core.py
alarm/server/app/: reolink.py  reolink_core.py
api/: main.py
config/: .env.example  example_frigate.yml
config/systemd/: scc-watch-reolink.service  scc.service
docs/: development.md  overview.md
docs/decisions/: README.md
frigate-config/: config.yml
infra/frigate/: config.yml  docker-compose.yml
infra/frigate/config/: config.yml
scc-ui/: 16000  app.py  backup.sh  frigate_announcements.py  glitch_context.json  glitch_voice.py  glitch_voice_fullduplex.py  glitch_voice_improved.py  glitch_voice_reolink.py  glitch_voice_simple.py  security_mode.json
scc-ui/static/: control-panel.html
scc-ui/templates/: index.html
scc_core/: __init__.py  config.py  dedupe.py  events.py  run_frigate.py  run_scc.py  ui.py  watch_reolink.py
scc_core/adapters/: __init__.py  frigate_mqtt.py
scripts/: deploy-frigate.sh  install.sh  status.sh  test_audio.sh  test_install.sh  vlc_play.py  wake_listener.py  watch_reolink.sh
services/: glitch-voice.service  scc-ui.service
systemd/: scc-watch-reolink.service  scc.service
web/: vite.config.js
